deploy_minio/k8s/prd/patch-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webui
spec:
  to:
    kind: Service
    name: minio-webui-prd
    weight: 100
  port:
    targetPort: webui

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: s3
spec:
  to:
    kind: Service
    name: minio-api-prd
    weight: 100
  port:
    targetPort: api
